--- a/exercise-3/templates/index.html
+++ b/exercise-3/templates/index.html
@@ -4,8 +4,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="registrants">Registered Students</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
+            <a class="nav-link" href="{{ url_for('getRegistrants') }}">Registered Students</a>
         </div>
     </div>
 </nav>
@@ -15,7 +15,7 @@
     <p>Use the following form to register for a student organization</p>
     <form action="/registrants" method="post">
         <label for="formControlInput" class="form-label">Name</label>
-        <input type="text" class="form-control" name="name" id="name" autocomplete="off"><br>
+        <input type="text" class="form-control" name="name" id="name" autocomplete="off" required><br>
         <label for="formControlInput" class="form-label">Organization</label>
         <select class="form-select" name="organization" id="organization" aria-label="Default select">
             <option value="Charlotte Hack">Charlotte Hack</option>
